Blender2.8 Crash when Editing Text on Curve #56879

Closed
opened 2018-09-23 12:24:13 +02:00 by Roel Koster · 12 comments
Member

System Information
OSX Sierra

Blender Version
Broken: daily builds of blender 2.8
Worked: release

Short description of error
(Edit) Text on Curve crashes blender 2.8

Exact steps for others to reproduce the error

  • Factory Defaults
  • Add Bezier Circle
  • Add Text
  • Activate Text on Curve for Text object and select the bezier circle
    Notice that it won't show until you toggle edit/object mode Notice that in edit mode the cursor is not at the end (cause of bug/crash?)
  • Press cursor key left
  • CRASH

Thanks a lot!
Roel

EDIT: REMOVED another request..

**System Information** OSX Sierra **Blender Version** Broken: daily builds of blender 2.8 Worked: release **Short description of error** (Edit) Text on Curve crashes blender 2.8 **Exact steps for others to reproduce the error** - Factory Defaults - Add Bezier Circle - Add Text - Activate Text on Curve for Text object and select the bezier circle **Notice that it won't show until you toggle edit/object mode** Notice that in edit mode the cursor is not at the end (cause of bug/crash?) - Press cursor key left - CRASH Thanks a lot! Roel EDIT: REMOVED another request..
Author
Member

Added subscriber: @kostex

Added subscriber: @kostex

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author
Member

Hi Bastien,

I really don't know why, but I've used the template, gave complete instructions how to get blender to crash. Is it only because I've asked to look into another small issue, you've set this to incomplete and gave me the "submission tips/templates"?
Well, if that is indeed the case, I've removed that small addendum at the end.
Otherwise I wouldn't know what else to give you.. a blend file won't do any good.

Hi Bastien, I really don't know why, but I've used the template, gave complete instructions how to get blender to crash. Is it only because I've asked to look into another small issue, you've set this to incomplete and gave me the "submission tips/templates"? Well, if that is indeed the case, I've removed that small addendum at the end. Otherwise I wouldn't know what else to give you.. a blend file won't do any good.

Added subscriber: @StephenSwaney

Added subscriber: @StephenSwaney

A simple .blend showing the problem would be a big help. It saves time in trying to reproduce the problem AND it shows us whatever settings are in effect.

A simple .blend showing the problem would be a big help. It saves time in trying to reproduce the problem AND it shows us whatever settings are in effect.
Author
Member

In all this time it would only have taken an average blender user maybe 10 seconds to follow my "crash" path..

But here you go.. a .blend file, but I'm afraid you STILL have to do some work yourself to get it to crash (AND FOLLOW MY INSTRUCTIONS PRECISELY, NOT MORE, NO LESS KEYS, MOUSE MOVEMENTS OR ANYTHING... to be sure it can be pinpointed to this particular problem:

  • Start blender with factory defaults
  • Open attached blend file
  • PRESS TAB
  • PRESS KEYBOARD CURSOR KEY LEFT!
  • Obeserve crash..

All in all this takes as much time as getting blender to crash WITHOUT the blend.. but you ask, I give...
crash_curve.blend

In all this time it would only have taken an average blender user maybe 10 seconds to follow my "crash" path.. But here you go.. a .blend file, but I'm afraid you STILL have to do some work yourself to get it to crash (AND FOLLOW MY INSTRUCTIONS PRECISELY, NOT MORE, NO LESS KEYS, MOUSE MOVEMENTS OR ANYTHING... to be sure it can be pinpointed to this particular problem: - Start blender with factory defaults - Open attached blend file - PRESS TAB - PRESS KEYBOARD CURSOR KEY LEFT! - Obeserve crash.. All in all this takes as much time as getting blender to crash WITHOUT the blend.. but you ask, I give... [crash_curve.blend](https://archive.blender.org/developer/F4880430/crash_curve.blend)
Author
Member

BTW, please also follow the first instructions, because the crash happens because the cursor key is not after the last character I THINK, but you would only see that better if you'd follow my original instructions, without the blend file

BTW, please also follow the first instructions, because the crash happens because the cursor key is not after the last character I THINK, but you would only see that better if you'd follow my original instructions, without the blend file
Bastien Montagne self-assigned this 2018-09-30 21:15:04 +02:00
  • DO NOT WRITE WITH CAPITALS, IT GIVES THE FEELING YOU ARE SHOUTING!
  • I won’t explain again why .blend file helps us, already done hundreds of times, just follow our instructions, will save tremendous amount of time to everybody.
  • Crash confirmed
- DO NOT WRITE WITH CAPITALS, IT GIVES THE FEELING YOU ARE SHOUTING! - I won’t explain again why .blend file helps us, already done hundreds of times, just follow our instructions, will save tremendous amount of time to everybody. - Crash confirmed

This issue was referenced by 3a09ff77a1

This issue was referenced by 3a09ff77a1d74af2df7da5225c8292d3cf1243a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Hi,

You've fixed the most important part (the crash)
Is it on purpose that you did not fix the not showing text on curve before entering edit mode (because blender doesn't crash on it) or indeed forgot to read the original report?

Hi, You've fixed the most important part (the crash) Is it on purpose that you did not fix the not showing text on curve before entering edit mode (because blender doesn't crash on it) or indeed forgot to read the original report?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56879
No description provided.