Fix T56879: Blender2.8 Crash when Editing Text on Curve.

Moving cursor in 3D text edit mode calls `BKE_vfont_to_curve_ex()`,
which expects to work with evaluated data (curve cache runtime etc.).